@@ -1,3 +1,7 @@
+2005-04-08  Matthias Wimmer  <m@tthias.net>
+
+    * xdb_file/xdbfiletool.c: simple limited function to get data from xdb
+
 2005-04-06  Matthias Wimmer  <m@tthias.net>
 
     * xdb_sql/xdb_sql.c: gcc 2.95.x fix
